# codesho-test

./: .env.example  .gitignore  AGENTS.md  README.md  compose.yaml
backend/: Dockerfile  pyproject.toml
backend/config/: auth_views.py  authentication.py  celery.py  passcode_change_cleanup.py  passcode_change_completion.py  passcode_change_issuance.py  urls.py
backend/config/settings/: base.py  compose.py  local.py  production.py  test.py
backend/modules/identity/: abuse.py  apps.py  challenge.py  challenge_cookie.py  models.py  passcode_change_cleanup.py  passcodes.py  pepper.py  request_signals.py  tasks.py
backend/modules/identity/migrations/: 0001_initial.py  0002_passcodecredential.py  0003_user_session_auth_epoch.py  (+3 more)
backend/modules/platform_event/: apps.py  models.py  security_audit.py  services.py  views.py
backend/modules/platform_tenant/: admin.py  apps.py  context.py  middleware.py  models.py  tasks.py
backend/tests/: test_compose_pepper_settings.py  test_health.py  test_middleware.py  test_outbox.py  test_passcode_abuse.py  test_passcode_change_audit_allow_list_migration.py  test_passcode_change_audit_producers.py  test_passcode_change_challenge.py  test_passcode_change_challenge_postgres.py  test_passcode_change_cleanup.py  test_passcode_change_completion.py  test_passcode_change_cookie_contract.py  test_passcode_change_cookie_settings.py  test_passcode_change_end_to_end.py  test_passcode_change_login_issuance.py  test_passcode_completion_redis_integration.py  test_passcode_login.py  test_passcodes.py  test_request_signals.py  test_security_audit.py  test_tasks.py  test_tenant_context.py
docs/: openapi.yaml  (+1 more)
(+129 files in other folders)
