[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "codesho-backend"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
  "Django>=5.2,<5.3",
  "djangorestframework>=3.16,<3.17",
  "drf-spectacular>=0.28,<0.29",
  "psycopg[binary]>=3.2,<3.3",
  "celery[redis]>=5.5,<5.6",
  "django-environ>=0.12,<0.13",
  "argon2-cffi>=23.1,<26",
  "redis>=5.2,<6",
  "gunicorn>=23,<24",
  "uvicorn[standard]>=0.34,<0.36",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-django>=4.10,<5",
  "pytest-cov>=6,<7",
  "ruff>=0.11,<0.13",
  "mypy>=1.15,<2",
  "django-stubs[compatible-mypy]>=5.2,<5.3",
]

[tool.setuptools.packages.find]
include = ["config*", "modules*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py"]
addopts = "--strict-markers --disable-warnings --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["**/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "DJ"]
ignore = ["DJ001"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict = true
exclude = ["migrations", "tests"]
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["celery", "celery.*", "environ"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["config.celery", "modules.platform_tenant.tasks"]
disallow_subclassing_any = false

[tool.django-stubs]
django_settings_module = "config.settings.test"
